Changelog
=========

2.0b2 (unreleased)
------------------

- nothing


2.0b1 (2012-03-09)
------------------

- Remove archetypes-based Topic content type on install.
  [timo]

- Do not hide sort_on and sort_reversed on the field level, since this will
  break the JS code for sorting in plone.formwidget.querystring. At some
  point we have to refactor the code to make plone.formwidget.querystring use
  z3c.form only for sorting.
  [timo]


2.0a1 (2011-11-13)
------------------

- Initial release of the dexterity-based version.